force-app/main/default/objects/AccessApplication__c/AccessApplication__c.object-meta.xml
<CustomObject>
    <label>Access Application</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>