force-app/main/default/objects/AccessApplication__c/fields/ApplicationReason__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReason__c</fullName>
    <label>Application Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>