force-app/main/default/objects/AccessApplication__c/fields/PermissionSetId__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetId__c</fullName>
    <label>Permission Set ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>