force-app/main/default/objects/AccessApplication__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Til vurdering</fullName>
                <default>true</default>
                <label>Til vurdering</label>
            </value>
            <value>
                <fullName>Godkjent</fullName>
            </value>
            <value>
                <fullName>Ikke godkjent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>